2013-01-27 Roman
- SYS: Work DB for "Start" project change to "start/St.db".
- FIX:SYS: Document filename fix for "moduleCreation.pdf".
- DB, DB.*: Editable control object's configuration fields depends from "Enable" state is added for DB object.
    Some charsets list for field "CODEPAGE" is added.
- DAQ.LogicLev: Editable control for Controller object's configuration fields depends from "Start" state is added.
- DAQ.SMH2Gi: Directory ./data/*.ini append to repository.


2013-01-26 Roman
- DAQ.Templates, DAQ.LogicLev, DAQ.ModBus, DAQ.Siemens:
    IO type sets to "Text" and display its into DAQ attributes and template's constants.
- DAQ.DiamondBoards: Processed AI numbers strict is added from asserted for the board. Read DIO by ports (bytes) is added.
- Transport.Serial: Editable control object's configuration fields depends from "Start" state is added for input transport.
- FIX:UI.Vision: Size points for selected widgets into development mode display is fixed.


2013-01-18 Roman
- FIX:SYS: RPM build spec-files some fixed for ALTLinux.
- SYS: Tasks priority level context help message is added.
- !:DAQ.*: Editable control for Controller object's configuration fields depends from "Enable" and "Start" state is added.
- !!:DAQ.ModBus: Context help for protocol's node into "Data" mode for data's field "Id" and link status by "(+)" is added.
    ModBus protocol log generation is some updated and added this messages into tab "Diagnostics" of the Controller object,
    for debug level (0).
- !:DAQ.OPC_UA: OPC UA protocol's dump messages added into tab "Diagnostics" of the Controller object, for debug level (0).
- !!:Transport.Serial: Configure field "Priority" for input transport's task is added.
- !!:UI.VCAEngine: Primitive "Diagram" field "Parameters number" limit expand to 100.
    Order index for widget's attributes is set to 10 bits depth, that up to 1024 attributes support.