@@ -126,7 +126,7 @@ AC_ARG_ENABLE(CrossCompile,AC_HELP_STRING([--enable-CrossCompile], [enable cross
 AC_ARG_ENABLE(CoreLibStatic,AC_HELP_STRING([--enable-CoreLibStatic], [enable OpenSCADA core lib no shared, only static.]),
 [ liboscada_la_LIBTOOLFLAGS="--tag=disable-shared"; AC_SUBST(liboscada_la_LIBTOOLFLAGS) ],[ enable_CoreLibStatic=no; ])
 AC_ARG_ENABLE(LibGD,AC_HELP_STRING([--disable-LibGD], [disable using library LibGD in core]),[ ],[ enable_LibGD=yes; ])
-AC_ARG_ENABLE(AllModuls,AC_HELP_STRING([--enable-AllModuls], [all modules enable(yes)/include(incl)/for dist(dist)/disable(no) for next separated selection]),
+AC_ARG_ENABLE(AllModuls,AC_HELP_STRING([--enable-AllModuls], [all modules enable(yes)/including(incl)/for dist(dist)/disable(no) for next separated selection]),
 [ ],[ enable_AllModuls=individual; ])
 
 AC_MSG_RESULT(========== Core libraries check =============)
@@ -476,7 +476,7 @@ fi
 
 AC_MSG_RESULT([============ Final configuration results ==============])
 AC_MSG_RESULT([* Status:])
-AC_MSG_RESULT([  - Enable(yes)/include(incl)/for dist(dist)/disable(no) all modules = $enable_AllModuls])
+AC_MSG_RESULT([  - Enable(yes)/including(incl)/for dist(dist)/disable(no) all modules = $enable_AllModuls])
 AC_MSG_RESULT([  - Crosscompile build                                          = $enable_CrossCompile])
 AC_MSG_RESULT([  - Core lib build only static                                  = $enable_CoreLibStatic])
 AC_MSG_RESULT([* Generic features:])
