@@ -3329,7 +3329,7 @@ bool ShapeDocument::attrSet( WdgView *w, int uiPrmPos, const string &val )
 	shD->web->setFont(getFont(shD->font,vmin(w->xScale(true),w->yScale(true)),false));
 	//> Process source document
 	//>> Parse document
-	XMLNode xproc;
+	XMLNode xproc("body");
 	try{ if(!shD->doc.empty()) xproc.load(string(XHTML_entity)+shD->doc, true, Mess->charset()); }
 	catch( TError err )
 	{ mess_err(mod->nodePath().c_str(),_("Document '%s' parsing is error: %s"),w->id().c_str(),err.mess.c_str()); }
