@@ -96,13 +96,15 @@ void TModSchedul::load_( )
     //> Load parameters from command line
     setChkPer(atoi(TBDS::genDBGet(nodePath()+"ChkPer",TSYS::int2str(chkPer())).c_str()));
     SYS->setModDir(TBDS::genDBGet(nodePath()+"ModPath",SYS->modDir()));
-    setAllowList(TBDS::genDBGet(nodePath()+"ModAllow",allowList(),"root",true));
-    setDenyList(TBDS::genDBGet(nodePath()+"ModDeny",denyList(),"root",true));
+    setAllowList(TBDS::genDBGet(nodePath()+"ModAllow",allowList(),"root",TBDS::OnlyCfg));
+    setDenyList(TBDS::genDBGet(nodePath()+"ModDeny",denyList(),"root",TBDS::OnlyCfg));
 }
 
 void TModSchedul::save_( )
 {
     TBDS::genDBSet(nodePath()+"ChkPer",TSYS::int2str(chkPer()));
+    TBDS::genDBSet(nodePath()+"ModAllow",allowList(),"root",TBDS::OnlyCfg);
+    TBDS::genDBSet(nodePath()+"ModDeny",denyList(),"root",TBDS::OnlyCfg);
 }
 
 void TModSchedul::ScanDir( const string &Paths, vector<string> &files )
@@ -416,10 +418,13 @@ void TModSchedul::cntrCmdProc( XMLNode *opt )
 	if(ctrMkNode("area",opt,0,"/ms",_("Subsystem"),R_R_R_,"root",SMSH_ID))
 	{
 	    ctrMkNode("fld",opt,-1,"/ms/mod_path",_("Path to shared libs(modules)"),R_R_R_,"root",SMSH_ID,1,"tp","str");
-	    ctrMkNode("fld",opt,-1,"/ms/mod_allow",_("Allowed modules"),R_R_R_,"root",SMSH_ID,2,"tp","str",
-		"help",_("List of shared libs(modules) allow for auto connection.\nElements separated by symbol ';'.\nValue '*' is used for allow all modules."));
-	    ctrMkNode("fld",opt,-1,"/ms/mod_deny",_("Denied modules"),R_R_R_,"root",SMSH_ID,2,"tp","str",
-		"help",_("List of shared libs(modules) deny for auto connection.\nElements separated by symbol ';'."));
+	    ctrMkNode("fld",opt,-1,"/ms/mod_deny",_("Denied modules"),RWRWR_,"root",SMSH_ID,2,"tp","str",
+		"help",_("List of shared libs(modules) deny for auto connection.\n"
+		         "Elements separated by symbol ';'."));
+	    ctrMkNode("fld",opt,-1,"/ms/mod_allow",_("Allowed modules"),RWRWR_,"root",SMSH_ID,2,"tp","str",
+		"help",_("List of shared libs(modules) allowed for auto connection.\n"
+		         "Elements separated by symbol ';'.\n"
+		         "Value '*' used for allow all modules."));
 	    ctrMkNode("fld",opt,-1,"/ms/chk_per",_("Check modules period (sec)"),RWRWR_,"root",SMSH_ID,1,"tp","dec");
 	    ctrMkNode("comm",opt,-1,"/ms/chk_now",_("Check modules now."),RWRW__,"root",SMSH_ID);
 	    if(ctrMkNode("table",opt,-1,"/ms/libs",_("Shared libs(modules)"),RWRWR_,"root",SMSH_ID,1,"key","path"))
@@ -437,8 +442,16 @@ void TModSchedul::cntrCmdProc( XMLNode *opt )
     //> Process command to page
     string a_path = opt->attr("path");
     if(a_path == "/ms/mod_path" && ctrChkNode(opt,"get"))	opt->setText(SYS->modDir());
-    else if(a_path == "/ms/mod_allow" && ctrChkNode(opt,"get"))	opt->setText(allowList());
-    else if(a_path == "/ms/mod_deny" && ctrChkNode(opt,"get"))	opt->setText(denyList());
+    else if(a_path == "/ms/mod_deny")
+    {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SMSH_ID,SEC_RD))	opt->setText(denyList());
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SMSH_ID,SEC_WR))	setDenyList(opt->text());
+    }
+    else if(a_path == "/ms/mod_allow")
+    {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SMSH_ID,SEC_RD))	opt->setText(allowList());
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SMSH_ID,SEC_WR))	setAllowList(opt->text());
+    }
     else if(a_path == "/ms/chk_per")
     {
 	if(ctrChkNode(opt,"get",RWRWR_,"root",SMSH_ID,SEC_RD))	opt->setText(TSYS::int2str(chkPer()));
